<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- This EditText now takes up remaining space via layout_weight. -->
    <EditText
        android:id="@+id/myEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:autofillHints="notepad"
        android:background="@color/off_white"
        android:gravity="top"
        android:hint="@string/edit_text_hint"
        android:imeOptions="flagNoEnterAction"
        android:inputType="textMultiLine|textCapSentences"
        android:overScrollMode="always"
        android:scrollbars="vertical" />

    <!-- This HorizontalScrollView holds your icon toolbar. -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">
                <!-- Checkbox -->
                <ImageButton
                    android:id="@+id/btnCheckBox"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/checkbox"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_check_box" />

                <!-- Unordered/bulleted list -->
                <ImageButton
                    android:id="@+id/btnUnorderedList"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/unordered_list"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_format_list_bulleted" />
                <!-- Indent Right -->
                <ImageButton
                    android:id="@+id/btnIndentRight"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/indent_right"
                    android:src="@drawable/baseline_format_indent_increase" />

                <!-- Indent Left -->
                <ImageButton
                    android:id="@+id/btnIndentLeft"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/indent_left"
                    android:src="@drawable/baseline_format_indent_decrease" />

                <ImageButton
                    android:id="@+id/btnOrderedList"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/ordered_list"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_format_list_numbered"
                    android:visibility="gone" />
            </LinearLayout>


            <!--                 Ordered/numbered list-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <!-- Bold -->
                <ImageButton
                    android:id="@+id/btnBold"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/bold"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_format_bold" />

                <!-- Italic -->
                <ImageButton
                    android:id="@+id/btnItalic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/italic"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_format_italic"
                    android:visibility="gone" />

                <!-- Underline -->
                <ImageButton
                    android:id="@+id/btnUnderline"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/underline"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_format_underlined"
                    android:visibility="gone" />

                <!-- Strikethrough -->
                <ImageButton
                    android:id="@+id/btnStrikethrough"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/strikethrough"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/baseline_format_strikethrough" />

                <ImageButton
                    android:id="@+id/btnHighlight"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/highlight"
                    android:src="@drawable/baseline_format_color_fill" />
            </LinearLayout>

            <!-- Highlight (yellow background) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnUndo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/highlight"
                    android:src="@drawable/baseline_undo" />

                <ImageButton
                    android:id="@+id/btnRedo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ripple_gray_background"
                    android:contentDescription="@string/highlight"
                    android:src="@drawable/baseline_redo" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
